Mer informativa produkt sidor
Gav de andra produkterna mer data att visa. Gjorde små justeringar samt justerade texten i checkout. Nu ökas profilens "totalt spenderat" efter varje order.

--- a/content/products/slime_rancher/description.html
+++ b/content/products/slime_rancher/description.html
@@ -1,17 +1,57 @@
-<html>
-<head>
-<meta charset="utf-8">
-</head>
-<body>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu sollicitudin ipsum. Curabitur eu ipsum ac turpis pulvinar porttitor eget non turpis. Aliquam erat volutpat. Vestibulum tincidunt risus ut turpis ultricies lacinia. Sed eu dui sit amet ex mollis mattis vitae non velit. In ut massa a ante viverra tempor non a purus. Fusce eget felis iaculis, viverra mi eget, venenatis velit. Ut molestie justo nec fermentum semper. Ut ac ligula tortor.</p>
-<p>Donec orci ligula, tincidunt quis sapien eu, imperdiet finibus augue. Etiam elit elit, convallis eget dapibus a, condimentum a augue. Pellentesque in viverra lorem. Mauris finibus ut lorem vel pharetra. Sed tellus purus, vehicula at mollis nec, pellentesque nec sapien. In vel dolor at purus tincidunt malesuada. Morbi fermentum fermentum consequat. Phasellus porta mollis euismod. Aenean aliquam mollis libero, blandit faucibus sem semper ut. Morbi volutpat congue neque, eget mollis nibh lobortis quis. Vestibulum tristique commodo diam non dictum. Morbi malesuada semper egestas. Aliquam imperdiet odio in magna semper, vitae laoreet purus tristique. Aenean lobortis mi diam, eu mollis erat tincidunt in.</p>
-<p>In ultrices feugiat erat, nec mattis mauris auctor efficitur. Quisque lorem risus, convallis ac fermentum nec, interdum eget odio. Nulla in fermentum mi. Pellentesque quis massa ut nulla lobortis efficitur. Morbi dictum ante vitae ipsum vestibulum, ac bibendum libero lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus pharetra semper sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus pulvinar ante, ut rhoncus metus tincidunt in. Donec dolor dolor, fringilla eu tortor in, suscipit pretium nibh.</p>
-<p>Donec bibendum felis sed condimentum pulvinar. Vestibulum eget ultricies eros. Morbi luctus nulla vitae dui placerat elementum. Phasellus condimentum, lorem at tempor blandit, orci mi condimentum nisl, eu eleifend metus odio at ex. Maecenas elit justo, accumsan sed dui ut, vulputate iaculis nisi. Proin in est consequat, pretium velit eget, condimentum mauris. Sed molestie, nibh eget maximus fermentum, orci sapien imperdiet dolor, vitae rutrum magna risus ut sem. Curabitur rutrum sem vel imperdiet tempus. Aenean quis arcu sem. Nulla facilisi. Suspendisse metus mi, malesuada nec volutpat at, pretium in nulla.</p>
-<p>Mauris odio arcu, euismod vel sagittis nec, faucibus in quam. Nunc consectetur, libero at volutpat facilisis, velit metus sodales nibh, at faucibus odio lectus id lectus. Ut tincidunt nulla vel lobortis tristique. Maecenas volutpat risus et justo egestas, nec aliquam nibh bibendum. Maecenas nec sem volutpat, accumsan magna quis, fringilla ipsum. Proin et varius erat. Ut risus purus, facilisis vitae leo at, ultrices fringilla mi. Mauris nec lectus feugiat, hendrerit eros ut, malesuada ligula. Fusce placerat, purus in tempor scelerisque, dolor ante facilisis ipsum, nec faucibus odio lectus nec ligula. Sed leo urna, facilisis semper consequat a, luctus eget nisl. In non gravida magna. Nulla vitae volutpat purus, id blandit sapien.</p>
-<p>Nunc efficitur neque sed ante rhoncus maximus. Integer ultrices, metus vel lobortis congue, quam leo congue nunc, ac lacinia felis nibh non tortor. Maecenas iaculis nulla quis mi vulputate, a condimentum neque fringilla. Sed commodo mauris lorem, eget tincidunt lacus convallis vitae. Maecenas imperdiet eu odio in molestie. Pellentesque viverra vulputate massa in pulvinar. Nunc purus lorem, fringilla ut est sed, bibendum gravida ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut interdum sem quis nibh cursus gravida.</p>
-<p>Duis maximus finibus rhoncus. Aliquam et risus lacus. Suspendisse massa ante, venenatis in nunc et, mattis facilisis diam. Sed sit amet imperdiet elit. Phasellus in venenatis urna. Nullam id sollicitudin eros. Vestibulum sodales ullamcorper nibh, in laoreet augue tristique consectetur.</p>
-<p>Morbi sed urna sed mi luctus vestibulum. Aliquam sollicitudin, lectus at sagittis elementum, odio felis congue enim, a interdum velit dui congue magna. Donec quis sem lectus. Vivamus eget nisi velit. Proin mauris libero, condimentum at arcu at, scelerisque viverra ligula. Nullam quis metus sit amet dui semper lobortis id at ligula. Aenean eget ex ut velit volutpat euismod. Vivamus malesuada viverra ipsum venenatis laoreet. Morbi dictum, quam et dapibus pretium, libero libero fringilla est, ac elementum justo dolor id odio.</p>
-<p>&nbsp;</p>
 
-</body>
-</html>
+<H1 CLASS="western" ALIGN=JUSTIFY STYLE="margin-top: 0in">Välkommen
+till det <I>far, far range</I>.</H1>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in"><I>Slime Rancher</I> är
+en charmig, första persons, sandbox-upplevelse. Spela som Beatrix
+LeBeau: en modig ung ranchägare som påbörjar sitt liv i <I>far far
+range</I> tusen som är tusen ljusår från jorden. Varje dag möts
+med nya utmaningar och riskfyllda möjligheter när du försöker
+samla en stor förmögenhet genom affärer av slime ranching. Samla
+färgglada slimes, odla grödor, skörda resurser och utforska de
+otamade vildarna genom att behärska din allsidiga vacpack.</P>
+<H2 CLASS="western" ALIGN=JUSTIFY>Satsa din fordran 
+</H2>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Den berömda rancheren,
+Hobson Twillgers, har skickat sin ranch till dig. Pimpa upp den,
+upptäck hemligheterna som är gömda på denna mystiska planet och
+dominera Plort Market. 
+</P>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Växa grödor och
+uppfodra chickadoos för att mata din samling av hungriga slimes. 
+</P>
+<UL>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Gör dagliga
+	uppgifter från andra Ranchers för att få bonusbelöningar. 
+	</P>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Tjäna pengar för
+	att uppgradera din vacpack, bygga fler burar eller utöka din ranch.
+		</P>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Använd Slime
+	Vetenskap för att hitta sällsynta resurser, hantverksdekorationer
+	och skapa gadgets som hjälper dig på dina äventyrer.</P>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Utforska en
+	sprudlande värld som är laddad med massor av hemligheter och gömda
+	skatter.  
+	</P>
+</UL>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in"><BR>
+</P>
+<H3 CLASS="western" ALIGN=JUSTIFY STYLE="margin-top: 0in">Slimetastiska
+Funktioner:</H3>
+<UL>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Välj mellan tre
+	olika spellägen: Äventyr, Casual eller Rush</P>
+</UL>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in"><BR>
+</P>
+<UL>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Känn kreativiteten
+	genom kombinera slimes och få upp till 150 olika hybrid slimes</P>
+</UL>
+<P ALIGN=JUSTIFY STYLE="margin-bottom: 0in"><BR>
+</P>
+<UL>
+	<LI><P ALIGN=JUSTIFY STYLE="margin-bottom: 0in">Dra nytta av vår
+	fulla kontroller support om du tycker att tangentbord ska användas
+	för att spela musik istället för spel</P>
+</UL>
